# EDR

./: .env.example  .gitignore  compose.yml  package-lock.json  package.json  pyproject.toml
docker/local/: Dockerfile  entrypoint
src/apps/accounts/: admin.py  managers.py  models.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/common/: models.py  types.py  validators.py
src/apps/common/templatetags/: custom_filter.py
src/apps/pages/: urls.py  views.py
src/apps/payments/: admin.py  models.py  signals.py
src/apps/payments/migrations/: 0001_initial.py
src/apps/reservations/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
src/apps/reservations/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/locale/en/LC_MESSAGES/: django.po
src/locale/fr/LC_MESSAGES/: django.po
src/static/css/: input.css  output.css
src/templates/cotton/components/: card_ticket.html  file_field.html  home_carousel.html  input_field.html  luggage_option.html  navbar.html  payment_option.html  phone_field.html  searchbar.html  sidebar.html  timeline.html
src/templates/cotton/layouts/: base.html  index.html
src/templates/cotton/partials/: travel_form.html
src/templates/mail/: reservation_notice.html  reservation_notice.txt
src/templates/pages/: confirm_reservation.html  home.html  payment_method.html  reservation.html  reservation_done.html
src/templates/partials/: autocompletion.html
src/templates/pdf/: reservation_notice.html
src/templates/reservation/: index.html
