[project]
name = "EDR"
version = "0.1.0"
description = "EDR (Ethio-Djibouti Railway) is a train ticket booking application for the Djibouti-Ethiopia railway line."
authors = [{ name = "Macktireh", email = "abdimack97@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-cotton>=2.1.3",
    "django-environ>=0.12.0",
    "django-htmx>=1.23.2",
    "django-rosetta>=0.10.2",
    "psycopg[binary]>=3.2.9",
    "six>=1.17.0",
    "WeasyPrint>=66.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
lint = [
    "ruff>=0.12.9",
]
dev = [
    "django-browser-reload>=1.18.0",
]

[tool.pdm.scripts]
newapp = "python src/manage.py startapp"
dev = "python src/manage.py runserver localhost:8000"
makemigrations = "python src/manage.py makemigrations"
migrate = "python src/manage.py migrate"
createsuperuser = "python src/manage.py createsuperuser --email=admin@example.com --name='Admin AD'"
makemessages = "src/manage.py makemessages --all"
mmm = { composite = ["makemigrations", "migrate"] }

[tool.pdm]
distribution = false

[tool.ruff]
line-length = 99
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
